INSANE Refactor. RSA & EC destekleri düzenlendi ve Tanılama paneli eklendi.